--- a/Practical.html
+++ b/Practical.html
@@ -17,7 +17,7 @@
     </div>
     <div class="navbar">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="">Conference</a></li>
             <li><a href="">Timeline</a></li>
             <li><a href="">Abstract&nbsp;&nbsp;&nbsp;Submission</a></li>
